# serializers/trusted_jwt_issuer.rb
@@ -1,0 +1,12 @@
+# frozen_string_literal: true
+
+class Serializers::TrustedJwtIssuer < Serializers::Base
+  def self.serialize_internal(issuer, options = {})
+    {
+      id: issuer.ubid,
+      name: issuer.name,
+      issuer: issuer.issuer,
+      jwks_uri: issuer.jwks_uri
+    }
+  end
+end
